include/openswmm/engine/openswmm_2d.h


SWMM_ENGINE_API int swmm_2d_is_active(SWMM_Engine engine, int* active);
SWMM_ENGINE_API int swmm_2d_prepare_for_edit(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_2d_vertex_count(SWMM_Engine engine, int* count);
SWMM_ENGINE_API int swmm_2d_triangle_count(SWMM_Engine engine, int* count);
SWMM_ENGINE_API int swmm_2d_vertex_get_xyz(SWMM_Engine engine, int idx,
                                             double* x, double* y, double* z);
SWMM_ENGINE_API int swmm_2d_vertex_get_xyz_bulk(SWMM_Engine engine,
                                                  double* x, double* y, double* z);
SWMM_ENGINE_API int swmm_2d_set_vertex_z(SWMM_Engine engine, int idx, double z);
SWMM_ENGINE_API int swmm_2d_triangle_get_vertices(SWMM_Engine engine, int idx,
                                                    int* v0, int* v1, int* v2);
SWMM_ENGINE_API int swmm_2d_triangle_get_area(SWMM_Engine engine, int idx,
                                                double* area);
SWMM_ENGINE_API int swmm_2d_triangle_get_centroid(SWMM_Engine engine, int idx,
                                                    double* cx, double* cy,
                                                    double* cz);
SWMM_ENGINE_API int swmm_2d_triangle_get_mannings(SWMM_Engine engine, int idx,
                                                    double* n);
SWMM_ENGINE_API int swmm_2d_set_triangle_mannings(SWMM_Engine engine, int idx,
                                                    double n);
SWMM_ENGINE_API int swmm_2d_set_vertex_tag(SWMM_Engine engine, int idx,
                                             const char* tag);
SWMM_ENGINE_API int swmm_2d_set_triangle_tag(SWMM_Engine engine, int idx,
                                               const char* tag);
SWMM_ENGINE_API int swmm_2d_get_vertex_tag(SWMM_Engine engine, int idx,
                                           char* buf, int buflen);
SWMM_ENGINE_API int swmm_2d_get_triangle_tag(SWMM_Engine engine, int idx,
                                             char* buf, int buflen);
SWMM_ENGINE_API int swmm_2d_triangle_get_neighbours(SWMM_Engine engine, int idx,
                                                      int* n0, int* n1, int* n2);
SWMM_ENGINE_API int swmm_2d_edge_get_geometry_bulk(SWMM_Engine engine,
                                                     double* length,
                                                     double* nx,
                                                     double* ny);
SWMM_ENGINE_API int swmm_2d_vertex_coupling_count(SWMM_Engine engine, int* count);
SWMM_ENGINE_API int swmm_2d_triangle_coupling_count(SWMM_Engine engine, int* count);
SWMM_ENGINE_API int swmm_2d_vertex_get_coupled_node(SWMM_Engine engine,
                                                      int vertex_idx,
                                                      int* node_idx);
SWMM_ENGINE_API int swmm_2d_triangle_get_coupled_node(SWMM_Engine engine,
                                                        int tri_idx,
                                                        int* node_idx);
SWMM_ENGINE_API int swmm_2d_set_vertex_coupled_node(SWMM_Engine engine,
                                                      int vertex_idx,
                                                      const char* node_name);
SWMM_ENGINE_API int swmm_2d_get_depth(SWMM_Engine engine, int idx, double* depth);
SWMM_ENGINE_API int swmm_2d_get_head(SWMM_Engine engine, int idx, double* head);
SWMM_ENGINE_API int swmm_2d_get_coupling_flux(SWMM_Engine engine, int idx,
                                                double* flux);
SWMM_ENGINE_API int swmm_2d_get_rainfall(SWMM_Engine engine, int idx,
                                           double* rainfall);
SWMM_ENGINE_API int swmm_2d_get_net_source(SWMM_Engine engine, int idx,
                                             double* net_source);
SWMM_ENGINE_API int swmm_2d_get_depths_bulk(SWMM_Engine engine, double* depths);
SWMM_ENGINE_API int swmm_2d_get_heads_bulk(SWMM_Engine engine, double* heads);
SWMM_ENGINE_API int swmm_2d_get_coupling_fluxes_bulk(SWMM_Engine engine,
                                                       double* fluxes);
SWMM_ENGINE_API int swmm_2d_get_edge_flux_bulk(SWMM_Engine engine,
                                                 double* flux);
SWMM_ENGINE_API int swmm_2d_get_edge_conveyance(SWMM_Engine engine,
                                                  int tri, int edge,
                                                  double* conveyance);
SWMM_ENGINE_API int swmm_2d_set_edge_conveyance(SWMM_Engine engine,
                                                  int tri, int edge,
                                                  double conveyance);
SWMM_ENGINE_API int swmm_2d_get_edge_conveyance_bulk(SWMM_Engine engine,
                                                       double* conveyance);
SWMM_ENGINE_API int swmm_2d_reset_edge_conveyance(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_2d_vertex_get_head(SWMM_Engine engine, int idx,
                                              double* head);
SWMM_ENGINE_API int swmm_2d_vertex_get_heads_bulk(SWMM_Engine engine,
                                                    double* heads);
SWMM_ENGINE_API int swmm_2d_get_max_depth(SWMM_Engine engine, double* max_depth);
SWMM_ENGINE_API int swmm_2d_get_total_volume(SWMM_Engine engine, double* volume);
SWMM_ENGINE_API int swmm_2d_get_total_exchange_flow(SWMM_Engine engine,
                                                      double* flow);
SWMM_ENGINE_API int swmm_2d_get_stat_max_depths(SWMM_Engine engine,
                                                  double* max_depths);
SWMM_ENGINE_API int swmm_2d_get_stat_max_velocities(SWMM_Engine engine,
                                                     double* max_velocities);
SWMM_ENGINE_API int swmm_2d_get_stat_max_continuity_err(SWMM_Engine engine,
                                                        double* max_errs);
SWMM_ENGINE_API int swmm_2d_get_continuity_error(SWMM_Engine engine, double* err);
SWMM_ENGINE_API int swmm_2d_get_mass_balance(SWMM_Engine engine,
                                             double* init_storage,
                                             double* final_storage,
                                             double* rainfall_in,
                                             double* coupling_1d_to_2d_in,
                                             double* coupling_2d_to_1d_out,
                                             double* outfall_in,
                                             double* outfall_out,
                                             double* boundary_in,
                                             double* boundary_out,
                                             double* evap_out);
SWMM_ENGINE_API int swmm_2d_force_rainfall(SWMM_Engine engine, int idx,
                                             double value, int mode,
                                             int persist);
SWMM_ENGINE_API int swmm_2d_force_rainfall_uniform(SWMM_Engine engine,
                                                     double value, int mode,
                                                     int persist);
SWMM_ENGINE_API int swmm_2d_force_evap(SWMM_Engine engine, int idx,
                                         double value, int mode,
                                         int persist);
SWMM_ENGINE_API int swmm_2d_force_evap_uniform(SWMM_Engine engine,
                                                 double value, int mode,
                                                 int persist);
SWMM_ENGINE_API int swmm_2d_force_coupling_flux(SWMM_Engine engine, int idx,
                                                  double value, int mode,
                                                  int persist);
SWMM_ENGINE_API int swmm_2d_force_clear_all(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_2d_get_dry_depth(SWMM_Engine engine, double* dry_depth);
SWMM_ENGINE_API int swmm_2d_set_dry_depth(SWMM_Engine engine, double dry_depth);
SWMM_ENGINE_API int swmm_2d_boundary_edge_count(SWMM_Engine engine, int* count);
SWMM_ENGINE_API int swmm_2d_get_edge_bc_type(SWMM_Engine engine,
                                               int tri_idx, int edge,
                                               int* bc_type);
SWMM_ENGINE_API int swmm_2d_set_edge_bc_type(SWMM_Engine engine,
                                               int tri_idx, int edge,
                                               int bc_type);
SWMM_ENGINE_API int swmm_2d_get_edge_bc_head(SWMM_Engine engine,
                                               int tri_idx, int edge,
                                               double* head);
SWMM_ENGINE_API int swmm_2d_set_edge_bc_head(SWMM_Engine engine,
                                               int tri_idx, int edge,
                                               double head);
SWMM_ENGINE_API int swmm_2d_get_edge_bc_slope(SWMM_Engine engine,
                                                int tri_idx, int edge,
                                                double* slope);
SWMM_ENGINE_API int swmm_2d_set_edge_bc_slope(SWMM_Engine engine,
                                                int tri_idx, int edge,
                                                double slope);
SWMM_ENGINE_API int swmm_2d_set_edge_bc_tseries_name(SWMM_Engine engine,
                                                       int tri_idx,
                                                       int edge,
                                                       const char* name);
SWMM_ENGINE_API int swmm_2d_get_edge_bc_flow(SWMM_Engine engine,
                                               int tri_idx, int edge,
                                               double* flow);
SWMM_ENGINE_API int swmm_2d_set_edge_bc_flow(SWMM_Engine engine,
                                               int tri_idx, int edge,
                                               double flow);
SWMM_ENGINE_API int swmm_2d_set_edge_bc_flow_tseries_name(SWMM_Engine engine,
                                                            int tri_idx,
                                                            int edge,
                                                            const char* name);
SWMM_ENGINE_API int swmm_2d_set_edge_bc_rating_curve_name(SWMM_Engine engine,
                                                            int tri_idx,
                                                            int edge,
                                                            const char* name);
SWMM_ENGINE_API int swmm_2d_get_edge_bc_cum_flux(SWMM_Engine engine,
                                                    int tri_idx, int edge,
                                                    double* cum_flux);